fix code block overflow

--- a/themes/vue/source/css/_syntax.styl
+++ b/themes/vue/source/css/_syntax.styl
@@ -1,3 +1,6 @@
+figure.highlight
+  overflow-x auto
+
 figure.highlight > table
   width 100%
 
